--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -48,6 +48,7 @@ $body-bg:                   $gray-100;
 $body-color:                $gray-800;
 $border-color: $gray-300;
 $background-highlight: $gray-200;
+$header-color: darken($primary, 10%);
 $text-color: $gray-900;
 $text-color-faded: $gray-700;
 $link-color: darken($secondary, 20%);
